# techTestCodingTeam

./: README.md  manage.py  pyproject.toml  setup.cfg
api/v1/: urls.py
api/v1/foods/: serializer.py  urls.py  views.py
techTestCodingTeam/: asgi.py  settings.py  wsgi.py
techTestCodingTeam/restaurant/: admin.py  apps.py  models.py
techTestCodingTeam/restaurant/migrations/: 0001_initial.py
